--- a/css/urtak.css
+++ b/css/urtak.css
@@ -4,10 +4,24 @@
   padding:2px 0 2px 2px;
   border:1px solid transparent;
 }
-.urtak_question_hover, .urtak_question:hover{
+#urtak_post_help, .urtak_question_hover, .urtak_question:hover{
   background-color:#FFF;
   border:1px solid #EEE;
 }
+
+#urtak_post_help {
+  margin:0;
+  padding:5px 10px;
+}
+#urtak_post_help h4{
+  font-size:14px;
+  margin:10px 0 0 0;
+}
+#urtak_post_help p{
+  line-height:22px;
+  font-size:13px;
+}
+
 .urtak_question_text {
   font-size: 13px;
   color:#333;
@@ -51,6 +65,15 @@
   line-height:17px;
 }
 
+.urtak_question_responses td{
+  padding-right:10px;
+}
+
+div.spanner {
+  height:22px;
+  width:22px;
+  float:left;
+}
 div.urtak_approved.urtak_on {
   background-image:url('../images/qs-approved-active.png');
   height:22px;
