--- a/resources/backend/urtak.css
+++ b/resources/backend/urtak.css
@@ -42,6 +42,10 @@ div.urtak-error .globe {
 	background-image: url(img/urtak-logo-32.png);
 }
 
+.urtak-wrap {
+	min-width: 800px;
+}
+
 .urtak-wrap > div.updated, .urtak-wrap > div.error {
 	bottom: -25px;
 	margin-bottom: 0;
@@ -96,7 +100,8 @@ div.urtak-error .globe {
 }
 
 .urtak-settings {
-	width: 488px;
+	margin-top: 63px;
+	max-width: 976px;
 }
 
 .urtak-settings h2 {
@@ -107,6 +112,27 @@ div.urtak-error .globe {
 	line-height: 1;
 	margin: 25px 0 14px;
 	padding: 0;
+}
+
+.urtak-individual-settings-section {
+	margin-bottom: 28px;
+}
+
+.urtak-settings-section {
+	width: 478px;
+}
+
+.urtak-settings-section-left {
+	float: left;
+	margin-right: 20px;
+}
+
+.urtak-settings-section-right {
+	float: left;
+}
+
+.urtak-clear {
+	clear: both;
 }
 
 #urtak-settings-header {
@@ -128,7 +154,7 @@ div.urtak-error .globe {
 	font-size: 19px;
 	font-weight: 700;
 	line-height: 1;
-	margin: 28px 0 13px;
+	margin: 0 0 13px;
 }
 
 .urtak-field {
@@ -243,6 +269,12 @@ div.urtak-error .globe {
 	width: 50%;
 }
 
+@media only screen and (max-width: 1180px) {
+	#urtak-other-widgets .postbox-container {
+		width: 100%;
+	}
+}
+
 #urtak-posts-without-urtaks-list {
 	-moz-column-count: 2;
 	-moz-column-gap: 20px;
@@ -258,6 +290,19 @@ div.urtak-error .globe {
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	cursor: default;
+}
+
+#urtak-at-a-glance .urtak-statistics-section-container {
+	margin: 10px 25px;
+}
+
+#urtak-at-a-glance .urtak-statistics-section {
+	float: left;
+	width: 25%;
+}
+
+#urtak-at-a-glance .urtak-statistics-section > div {
+
 }
 
 #urtak-dashboard-chart {
@@ -403,7 +448,49 @@ div.urtak-error .globe {
 .urtak-card-plot {
 	float: right;
 	height: 60px;
+	position: relative;
 	width: 60px;
+}
+
+.urtak-card-stats {
+	display: none;
+	padding-top: 2px;
+	position: absolute;
+
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.urtak-card-stats-item {
+	float: left;
+	font-size: 10px;
+	line-height: 15px;
+	margin-right: 4px;
+	text-align: right;
+	width: 28px;
+}
+
+.urtak-card-stats-item-right {
+	margin: 0;
+	text-align: left;
+}
+
+.urtak-card-stats-item-yes {
+	color: #00AEF0;
+}
+
+.urtak-card-stats-item-no {
+	color: #FF7100;
+}
+
+.urtak-card-plot:hover img {
+	opacity: 0.20;
+}
+
+.urtak-card-plot:hover .urtak-card-stats {
+	display: block;
 }
 
 .urtak-card-adder .urtak-card-plot {
@@ -412,7 +499,7 @@ div.urtak-error .globe {
 
 .urtak-card-adder .urtak-card-plot-controls {
 	display: block;
-	height: auto;
+	height: 85px;
 	width: auto;
 }
 
@@ -422,12 +509,22 @@ div.urtak-error .globe {
 }
 
 .urtak-card-adder .urtak-card-plot-controls .card-question-answers li {
+	cursor: pointer;
+	margin: 0;
+	padding: 3px 0;
+}
+
+.urtak-card-adder .urtak-card-plot-controls .card-question-answers li.card-question-answers-y {
+	padding-top: 0;
+}
+
+.urtak-card-adder .urtak-card-plot-controls .card-question-answers li a {
 	  font-family: "Droid Sans";
 	  font-size: 10px;
+	  display: block;
 	  height: 18px;
 	  line-height: 18px;
 	  overflow: hidden;
-	  margin-bottom: 5px;
 	  width: 80px;
 	  text-align: center;
 	  color: white;
@@ -443,7 +540,11 @@ div.urtak-error .globe {
 	  border-style: solid;
 }
 
-.urtak-card-adder .urtak-card-plot-controls .card-question-answers-y {
+.urtak-card-adder .urtak-card-plot-controls .card-question-answers li a:focus {
+	box-shadow: 0 0 15px #00aef0;
+}
+
+.urtak-card-adder .urtak-card-plot-controls .card-question-answers-y a {
 	background: #00aef0;
 	background: -moz-linear-gradient(top,  #00aef0 0%, #0089ba 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00aef0), color-stop(100%,#0089ba));
@@ -456,7 +557,11 @@ div.urtak-error .globe {
 	border-color: #666666 !important;
 }
 
-.urtak-card-adder .urtak-card-plot-controls .card-question-answers-n {
+.urtak-card-adder .urtak-card-plot-controls .card-question-answers a.deactivated {
+	opacity: 0.5;
+}
+
+.urtak-card-adder .urtak-card-plot-controls .card-question-answers-n a {
 	background: #ff7100;
 	background: -moz-linear-gradient(top,  #ff7100 0%, #d96200 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff7100), color-stop(100%,#d96200));
@@ -469,7 +574,11 @@ div.urtak-error .globe {
 	border-color: #666666 !important;
 }
 
-.urtak-card-adder .urtak-card-plot-controls .card-question-answers-d {
+.urtak-card-adder .urtak-card-plot-controls .card-question-answers .card-question-answers-n a:focus {
+	box-shadow: 0 0 15px #ff7100;
+}
+
+.urtak-card-adder .urtak-card-plot-controls .card-question-answers-d a {
 	background: #999999;
 	background: -moz-linear-gradient(top,  #999999 0%, #737373 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#999999), color-stop(100%,#737373));
@@ -480,6 +589,10 @@ div.urtak-error .globe {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#737373',GradientType=0 );
 	background-color: #737373 !important;
 	border-color: #666666 !important;
+}
+
+.urtak-card-adder .urtak-card-plot-controls .card-question-answers .card-question-answers-d a:focus {
+	box-shadow: 0 0 15px #999999;
 }
 
 .urtak-card-adder .urtak-card-plot-controls a.hover {
@@ -495,7 +608,6 @@ div.urtak-error .globe {
 	font-size: 10px;
 	font-weight: bold;
 	line-height: 18px;
-	margin-bottom: 4px;
 	text-align: center;
 	text-decoration: none;
 }
@@ -515,7 +627,7 @@ div.urtak-error .globe {
 .urtak-card-info-asker {
 	color: #999999;
 	font-size: 9px;
-	padding: 10px;
+	padding: 0 10px 10px;
 }
 
 .urtak-update-message {
@@ -628,6 +740,15 @@ div.urtak-error .globe {
 
 .urtak-disabled {
 	cursor: default;
+}
+
+.urtak-card-info-question a {
+	color: #333;
+	text-decoration: none;
+}
+
+.urtak-card-info-question a:hover {
+	text-decoration: underline;
 }
 
 .urtak-card-info-question textarea {
