--- a/resources/backend/urtak.css
+++ b/resources/backend/urtak.css
@@ -173,6 +173,16 @@ div.urtak-error .globe {
 	border: 1px solid #e6db55;
 }
 
+.urtak-field-half {
+	float: left;
+	margin-right: 20px;
+	width: 207px;
+}
+
+.urtak-field-half-right {
+	margin: 0;
+}
+
 #urtak-create-site-button-container {
 	display: none;
 }
@@ -193,6 +203,11 @@ div.urtak-error .globe {
 	display: block;
 	margin-bottom: 16px;
 	width: 99%;
+}
+
+.urtak-field input.urtak-hw-text {
+	display: inline;
+	width: 50px;
 }
 
 .urtak-credentals-field a {
@@ -224,6 +239,7 @@ div.urtak-error .globe {
 }
 
 .urtak-help {
+	clear: both;
 	color: #999999;
 	margin: 0 0 5px 20px;
 }
@@ -576,6 +592,25 @@ div.urtak-error .globe {
 
 .urtak-card-adder .urtak-card-plot-controls .card-question-answers .card-question-answers-n a:focus {
 	box-shadow: 0 0 15px #ff7100;
+}
+
+.urtak-card-adder .urtak-card-plot-controls .card-question-answers-s a {
+	background: none;
+	background: #7bcd1a;
+	background: -moz-linear-gradient(top,  #7bcd1a 0%, #3b9840 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7bcd1a), color-stop(100%,#3b9840));
+	background: -webkit-linear-gradient(top,  #7bcd1a 0%,#3b9840 100%);
+	background: -o-linear-gradient(top,  #7bcd1a 0%,#3b9840 100%);
+	background: -ms-linear-gradient(top,  #7bcd1a 0%,#3b9840 100%);
+	background: linear-gradient(to bottom,  #7bcd1a 0%,#3b9840 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7bcd1a', endColorstr='#3b9840',GradientType=0 );
+	border-color: #0a6b37;
+	color: #FFFFFF;
+}
+
+.urtak-card-adder .urtak-card-plot-controls .card-question-answers .card-question-answers-s a:focus {
+	box-shadow: 0 0 15px #7bcd1a;
+	color: #114114;
 }
 
 .urtak-card-adder .urtak-card-plot-controls .card-question-answers-d a {
