--- a/resources/backend/urtak.css
+++ b/resources/backend/urtak.css
@@ -671,6 +671,22 @@ div.urtak-error .globe {
 	line-height: 22px;
 }
 
+.urtak-update-message-first-question {
+	display: none;
+}
+
+.urtak-update-message-first-question.is-first-question {
+	display: inline;
+}
+
+.urtak-update-message-not-first-question {
+	display: inline;
+}
+
+.urtak-update-message-not-first-question.is-first-question {
+	display: none;
+}
+
 .urtak-card-controls-container {
 	position: absolute;
 	bottom: 0;
